# nhl-stats

./: .env.example  .gitignore  CLAUDE.md  OPERATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  scheduled-scrape.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-03-20-update-command-and-cron.md  2026-03-22-hockey-insights-site.md
docs/superpowers/specs/: 2026-03-21-hockey-insights-site-design.md
scripts/: fetch_rss.py  generate.py  install-cron.sh  llm_narrator.py  publish.sh  scrape_edge.py  social.py  story_selector.py  uninstall-cron.sh  update.sh
site/: package-lock.json  package.json
site/public/data/: headlines.json  leaderboard.json  story.json
site/src/app/: page.tsx
site/src/app/players/[id]/: page.tsx
site/src/app/teams/[abbrev]/: page.tsx
site/src/components/: Leaderboard.tsx  StoryCard.tsx
site/src/data/players/: 8470600.json  8470613.json  8470621.json  8471214.json  8471215.json  8471675.json  8471685.json  8471724.json  8473419.json  8473422.json  8473446.json  8473453.json  8473507.json  8473512.json  8473533.json  8473986.json  8473994.json  8474013.json  8474034.json  8474037.json  8474102.json  8474141.json  8474149.json  8474150.json  8474151.json  8474157.json  8474166.json  8474189.json  8474563.json  8474564.json  8474565.json  8474567.json  8474568.json  8474574.json  8474578.json  8474586.json  8474590.json  8474600.json  8474612.json  8474641.json  (+588 more)
site/src/data/teams/: ANA.json  BOS.json  BUF.json  CAR.json  CBJ.json  CGY.json  CHI.json  COL.json  DAL.json  DET.json  EDM.json  FLA.json  LAK.json  MIN.json  MTL.json  NJD.json  NSH.json  NYI.json  NYR.json  OTT.json  PHI.json  PIT.json  SEA.json  SJS.json  STL.json  TBL.json  TOR.json  UTA.json  VAN.json  VGK.json  WPG.json  WSH.json
site/src/lib/: data.ts
src/: __init__.py  cli.py
src/models/: __init__.py  game.py  player.py  team.py
src/scrapers/: __init__.py  base.py  moneypuck.py  nhl_api.py  nhl_injuries.py  yahoo_fantasy.py
src/storage/: __init__.py  database.py
src/utils/: logging.py
tests/: __init__.py  test_fetch_rss.py  test_generate.py  test_llm_narrator.py  test_nhl_injuries.py  test_scrapers.py  test_social.py  test_story_selector.py
